2005-08-17  George Peter Staplin <GeorgePS@XMission.com>

	* generic/tclBasic.c eliminate a namespace clash caused by
	BuiltinFuncTable not being static.

	* generic/tclObj.c fix a namespace clash caused by a missing
	static for pendingObjData.

2005-08-17  Kevin Kenny  <kennykb@acm.org>

	* generic/tclEvent.c (Tcl_Finalize): Removed a copy-and-paste
	accident that caused a (mostly harmless) double finalize of the
	load and filesystem subsystems.  
	* tests/clock.test: Eliminated the bad test clock-43.1, and split
	clock-50.1 into two tests, with a more permissive check on the
	error message for an out-of-range value.
	
2005-08-12  Kevin Kenny  <kennykb@acm.org>

	* generic/tclClock.c (MktimeObjCmd):
	* library/clock.tcl (GetSystemTimeZone, LoadZoneinfoFile,
	ReadZoneinfoFile):
	* tests/clock.test (clock-50.1):
	Added functionality to read /etc/localtime if it exists, so that
	Tcl's time can track system time on Linux even if TZ is not set.
	Changed ::tcl::clock::Mktime to check for failure, and added a
	test case that mimics failure but is really success.
	
2005-08-11  Kevin Kenny  <kennykb@acm.org>

	* generic/tclEvent.c:          Eliminated the USE_THREAD_STORAGE
	* generic/tclInt.h:            option (which is on in every build
	* generic/tclThread.c:         generated by the standard configurator).
	* generic/tclThreadStorage.c:  Eliminated the code for thread
	* unix/configure:              specific data without USE_THREAD_STORAGE
	* unix/tcl.m4:                 and radically refactored the code
	* unix/tclConfig.h.in:         for USE_THREAD_STORAGE so that it
	* unix/tclUnixThrd.c:          has fewer dependencies on the order
	* win/configure:               of finalization.  (Also, made
	* win/Makefile.in:             'make distclean' on Windows clean
	* win/rules.vc:                just a little bit cleaner.)
	* win/tcl.m4:
	* win/tclWinThrd.c:
	
2005-08-10  Kevin Kenny  <kennykb@acm.org>

	* generic/tclEvent.c (Tcl_Finalize): Pushed Tcl_FinalizeLoad and