@@ -1,9 +1,13 @@
+2005-08-22  Daniel Steffen  <das@users.sourceforge.net>
+
+	* unix/tclConfig.h.in: autoheader-2.59.
+
 2005-08-17  George Peter Staplin <GeorgePS@XMission.com>
 
-	* generic/tclBasic.c eliminate a namespace clash caused by
+	* generic/tclBasic.c: eliminate a namespace clash caused by
 	BuiltinFuncTable not being static.
 
-	* generic/tclObj.c fix a namespace clash caused by a missing
+	* generic/tclObj.c: fix a namespace clash caused by a missing
 	static for pendingObjData.
 
 2005-08-17  Kevin Kenny  <kennykb@acm.org>
